Refactor CI workflow by removing the warm system cache job and simplifying dependencies setup

--- a/.github/actions/install-system-dependencies/action.yml
+++ b/.github/actions/install-system-dependencies/action.yml
@@ -18,10 +18,7 @@ runs:
       if: ${{ inputs.enable-cache == 'true' }}
       id: get-date
       shell: bash
-      run: |
-        echo "date=$(/bin/date -u '+%Y%m%d')" >> $GITHUB_OUTPUT
-        # Use week number for longer cache retention
-        echo "week=$(/bin/date -u '+%Y-W%W')" >> $GITHUB_OUTPUT
+      run: echo "date=$(/bin/date -u '+%Y%m%d')" >> $GITHUB_OUTPUT
 
     - name: Cache apt packages
       if: ${{ inputs.enable-cache == 'true' }}
@@ -30,15 +27,13 @@ runs:
         path: |
           /var/cache/apt/archives
           /var/lib/apt/lists
-        key: ${{ runner.os }}-apt-${{ steps.get-date.outputs.week }}-${{ steps.get-date.outputs.date }}
+        key: ${{ runner.os }}-apt-${{ steps.get-date.outputs.date }}-${{ hashFiles('.github/actions/install-system-dependencies/action.yml') }}
         restore-keys: |
-          ${{ runner.os }}-apt-${{ steps.get-date.outputs.week }}-
+          ${{ runner.os }}-apt-${{ steps.get-date.outputs.date }}-
           ${{ runner.os }}-apt-
 
     - name: Install system packages
       shell: bash
       run: |
         sudo apt-get update -qq
-        # Use parallel downloads for faster installation on cache miss
-        echo 'Acquire::Retries "3";' | sudo tee /etc/apt/apt.conf.d/80-retries > /dev/null
         sudo apt-get install -qq -y ${{ inputs.packages }}
