--- a/.github/workflows/ci_on_macos.yml
+++ b/.github/workflows/ci_on_macos.yml
@@ -11,19 +11,8 @@ on:
       - espnet3
 
 jobs:
-  setup_macos:
-    runs-on: macOS-latest
-    if: github.event.pull_request.draft == false
-    steps:
-      - uses: actions/checkout@master
-      - name: Install FFmpeg via Homebrew
-        run: brew install ffmpeg
-      - name: Run ffmpeg command
-        run: ffmpeg -version
-
   check_installable_on_macos:
     runs-on: macOS-latest
-    needs: setup_macos
     if: github.event.pull_request.draft == false
     strategy:
       matrix:
@@ -32,6 +21,8 @@ jobs:
         use-conda: [true, false]
     steps:
       - uses: actions/checkout@master
+      - name: Install FFmpeg
+        uses: ./.github/actions/install-ffmpeg
       - uses: actions/cache@v5
         with:
           path: ~/.cache/pip
